* [UI/Opera/Usability] Fixed a few rendering issues when using Opera.  The downward arrow icon for 'more pages' in the global navigation menu wasn't aligned with the rest of the tabs.  The legend text in fieldsets had a line through it (mainly seen on profile pages).

--- a/features/cerberusweb.core/resources/css/cerberus.css
+++ b/features/cerberusweb.core/resources/css/cerberus.css
@@ -42,11 +42,13 @@ form {
 }
 
 fieldset {
-	background-color:rgb(255,255,255);
+	background-color: rgb(255,255,255);
 	background-image: url(bg_block.jpg?v=2012111201);
 	background-repeat: repeat-x;
-	border:1px solid rgb(230,230,230);
-	margin-bottom:10px;
+	border-width: 1px;
+	border-style: double;
+	border-color: rgb(230,230,230);
+	margin-bottom: 10px;
 }
 
 fieldset legend {
@@ -406,6 +408,7 @@ UL.navmenu > LI {
 	border-right:1px solid rgb(210,210,210);
 	padding:5px 8px;
 	margin:0px;
+	min-height:16px;
 	cursor:pointer;
 }
 
